--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,9 @@
     "strictFunctionTypes": true,
     "alwaysStrict": true
   },
+  "include": [
+    "src"
+  ],
   "exclude": [
     "node_modules",
     "**/node_modules/*"
