--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "dev.person": "nodemon ./persons/index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev.be": "nodemon ./index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "echo": "tsx ./db/log.js "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
+    "mongoose-auto-increment": "^5.0.1",
+    "source-map-explorer": "^2.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
