--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,11 +15,6 @@
     "strictFunctionTypes": true,
     "alwaysStrict": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
