--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fullstackopen-w",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
@@ -9,6 +10,7 @@
     "alova": "^2.16.2",
     "axios": "^1.6.3",
     "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
     "http-proxy-middleware": "^2.0.6",
     "json-server": "^0.17.4",
     "npm-run-all2": "^6.1.1",
@@ -28,14 +30,13 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "server": "json-server -p3005 --watch db.json",
     "server.person": "json-server -p3005 --watch db-person.json",
-    "re": "yarn --cwd .\\backend run echo"
+    "re": "yarn --cwd .\\backend run echo",
+    "lint": "eslint ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslintIgnore": [
+    "node_modules",
+    "build/*"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,7 +51,9 @@
   },
   "devDependencies": {
     "@react-dev-inspector/middleware": "^2.0.1",
+    "@typescript-eslint/parser": "^6.19.0",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "typescript": "^5.3.3"
   }
 }
