--- a/backend/package.json
+++ b/backend/package.json
@@ -5,25 +5,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "start": "node index.js",
     "dev.be": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "echo": "tsx ./db/log.js "
+    "echo": "tsx ./db/log.js",
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mongoose-auto-increment": "^5.0.1",
-    "source-map-explorer": "^2.5.3"
+    "pino": "^8.17.2",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^10.3.1",
+    "serve-favicon": "^2.5.0",
+    "source-map-explorer": "^2.5.3",
+    "supertest": "^6.3.4",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
