--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "start": "node index.js",
     "dev.be": "nodemon ./index.js",
     "echo": "tsx ./db/log.js",
-    "test": "cross-env NODE_ENV=test jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test.note.api": "cross-env NODE_ENV=test jest --verbose tests/note_api.test.js",
+    "test.blog.api": "cross-env NODE_ENV=test jest --verbose tests/blog_api.test.js",
+    "test.note.api.spec": "cross-env NODE_ENV=test jest --verbose tests/note_api.test.js -t \"fails with statuscode 404 if note does not exist\""
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +23,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
+    "@types/jest": "^29.5.11",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "jest": "^29.7.0",
