--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/supertest": "^6.0.2",
     "alova": "^2.16.2",
     "axios": "^1.6.3",
     "concurrently": "^8.2.2",
