--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,11 @@
 {
-  "extends": ["eslint:recommended", "react-app", "react-app/jest"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "react-app",
+    "react-app/jest"
+  ],
   "env": {
     "commonjs": true,
     "es2021": true,
@@ -11,6 +17,10 @@
     "sourceType": "module"
   },
   "rules": {
-    "eqeqeq": "error"
+    "eqeqeq": "error",
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react/jsx-uses-react": "error",
+    "react-hooks/exhaustive-deps": "error"
   }
 }
