--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,17 @@
     "test": "cross-env NODE_ENV=test jest --verbose",
     "test.note.api": "cross-env NODE_ENV=test jest --verbose tests/note_api.test.js",
     "test.blog.api": "cross-env NODE_ENV=test jest --verbose tests/blog_api.test.js",
-    "test.note.api.spec": "cross-env NODE_ENV=test jest --verbose tests/note_api.test.js -t \"fails with statuscode 404 if note does not exist\""
+    "test.note.api.spec": "cross-env NODE_ENV=test jest --verbose tests/note_api.test.js -t \"fails with statuscode 404 if note does not exist\"",
+    "test.user.api": "cross-env NODE_ENV=test jest --verbose tests/user_api.test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/mongoose-unique-validator": "^1.0.9",
+    "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -28,6 +33,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-unique-validator": "^5.0.0",
     "pino": "^8.17.2",
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
