--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,7 +14,8 @@
     "strict": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "alwaysStrict": true
+    "alwaysStrict": true,
+    "sourceMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/node_modules/*"]
