--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/supertest": "^6.0.2",
     "alova": "^2.16.2",
     "axios": "^1.6.3",
     "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "http-proxy-middleware": "^2.0.6",
     "json-server": "^0.17.4",
     "npm-run-all2": "^6.1.1",
@@ -53,8 +52,10 @@
   "devDependencies": {
     "@react-dev-inspector/middleware": "^2.0.1",
     "@tsconfig/create-react-app": "^2.0.2",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^6.19.0",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.56.0",
     "react-app-rewired": "^2.2.1",
     "typescript": "^5.3.3"
   }
