--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mongoose-auto-increment": "^5.0.1",
