--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "../jsconfig.backend.json",
+  "extends": "../jsconfig.be.json",
   "compilerOptions": {
-    "types": ["@types/jest"]
+    "types": [
+      "@types/jest"
+    ]
   }
 }
