--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,17 +9,19 @@
     }
   ],
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "Preserve",
     "moduleResolution": "Bundler",
     "target": "ES2020",
     "jsx": "react-jsx",
     "allowImportingTsExtensions": true,
     "strict": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
-      ],
+      ]
     }
   },
   "include": [
