--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@babel/core": "^7.24.6",
+    "@babel/core": "^7.24.7",
     "@babel/preset-react": "^7.24.6",
     "@eslint-react/eslint-plugin": "^1.5.12",
+    "@stylexjs/stylex": "^0.6.1",
     "@swc/core": "^1.5.7",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/customize-cra": "^1.0.8",
     "@types/webpack-bundle-analyzer": "^4.7.0",
+    "@types/webpack-node-externals": "^3.0.4",
     "@vitest/ui": "^1.6.0",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
@@ -23,18 +25,22 @@
     "http-proxy-middleware": "^2.0.6",
     "json-server": "^1.0.0-beta.0",
     "npm-run-all2": "^6.2.0",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-shallow-renderer": "^16.15.0",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "tree-kill": "^1.2.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "vitest": "^1.6.0",
     "web-vitals": "3.5.1",
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-dev-server": "^5.0.4",
-    "webpack-manifest-plugin": "^5.0.0"
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
     "dev": "concurrently --kill-others --kill-signal \"SIGINT\" --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn:start\" \"yarn:start.be\"",
@@ -42,9 +48,10 @@
     "dev-p": "run-p dev dev.be",
     "new-dev": "webpack serve --mode development",
     "new-build": "webpack --mode development",
+    "new-preview": "http-server ./new-build",
     "start": "cross-env PORT=3000 react-app-rewired start",
     "build": "react-app-rewired build",
-    "postinstall": "npx jest -h",
+    "postinstall": "patch-package",
     "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\"  react-app-rewired test --setupFilesAfterEnv ./src/setupTests.js",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -55,7 +62,8 @@
   },
   "eslintIgnore": [
     "node_modules",
-    "build/*"
+    "build/*",
+    "backend"
   ],
   "browserslist": {
     "production": [
@@ -70,16 +78,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.7",
     "@babel/preset-env": "^7.24.6",
     "@react-dev-inspector/middleware": "^2.0.1",
+    "@stylexjs/webpack-plugin": "^0.6.1",
     "@tsconfig/create-react-app": "^2.0.4",
+    "@types/node": "20.12.2",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^6.21.0",
     "babel-jest": "^29.7.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "customize-cra": "^1.0.0",
-    "eslint": "^9.3.0",
+    "eslint": "^9.4.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
