chore(proxy): change port & rm proxy

--- a/jsconfig.fe.json
+++ b/jsconfig.fe.json
@@ -9,6 +9,7 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "baseUrl": "./src",
     "paths": {
