refactor(be): refactor logger and boot prog transfer command to script

--- a/jsconfig.be.json
+++ b/jsconfig.be.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "Preserve",
+    "moduleResolution": "Bundler",
     "allowJs": true,
     "alwaysStrict": true,
     "baseUrl": "./backend",
