--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-    "dev": "concurrently --kill-others --kill-signal \"SIGINT\" --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn:start\" \"yarn:start.be\"",
-    "start.be": "yarn --cwd .\\backend run dev",
+    "dev": "yarn run coc",
+    "coc": "tsx --tsconfig ./jsconfig.json ./coc_boot.js",
+    "start.be": "yarn --cwd ./backend run dev",
     "dev-p": "run-p dev dev.be",
     "new-dev": "webpack serve --mode development",
     "new-build": "webpack --mode development",
@@ -57,14 +58,9 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "server": "json-server -p3725 --watch db.json",
     "server.person": "json-server -p3725 --watch db-person.json",
-    "re": "yarn --cwd .\\backend run echo",
+    "re": "yarn --cwd ./backend run echo",
     "lint": "eslint ./src"
   },
-  "eslintIgnore": [
-    "node_modules",
-    "build/*",
-    "backend"
-  ],
   "browserslist": {
     "production": [
       ">0.2%",
