--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,7 @@
     "target": "ES2020",
     "jsx": "react-jsx",
     "allowImportingTsExtensions": true,
+    "allowJs": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
