--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-react": "^7.24.6",
     "@eslint-react/eslint-plugin": "^1.5.12",
+    "@eslint/compat": "^1.1.0",
     "@stylexjs/stylex": "^0.6.1",
     "@swc/core": "^1.5.7",
     "@testing-library/jest-dom": "^6.1.6",
@@ -26,6 +27,7 @@
     "json-server": "^1.0.0-beta.0",
     "npm-run-all2": "^6.2.0",
     "patch-package": "^8.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -51,7 +53,7 @@
     "new-build": "webpack --mode development",
     "new-preview": "http-server ./new-build",
     "start": "cross-env PORT=3720 react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "cross-env PORT=3720 react-app-rewired build",
     "postinstall": "patch-package",
     "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\"  react-app-rewired test --setupFilesAfterEnv ./src/setupTests.js",
     "eject": "react-scripts eject",
