--- a/package.json
+++ b/package.json
@@ -5,40 +5,48 @@
   "type": "module",
   "dependencies": {
     "@babel/core": "^7.24.7",
-    "@babel/preset-react": "^7.24.6",
-    "@eslint-react/eslint-plugin": "^1.5.12",
+    "@babel/preset-react": "^7.24.7",
+    "@eslint-react/eslint-plugin": "^1.5.16",
     "@eslint/compat": "^1.1.0",
     "@stylexjs/stylex": "^0.6.1",
-    "@swc/core": "^1.5.7",
-    "@testing-library/jest-dom": "^6.1.6",
-    "@testing-library/react": "^14.1.2",
+    "@swc/core": "^1.6.5",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/customize-cra": "^1.0.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-node-externals": "^3.0.4",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "esbuild-loader": "^4.1.0",
+    "esbuild-loader": "^4.2.0",
     "file-loader": "^6.2.0",
     "http-proxy-middleware": "^3.0.0",
+    "jsdom": "^24.1.0",
     "json-server": "^1.0.0-beta.0",
     "npm-run-all2": "^6.2.0",
     "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-shallow-renderer": "^16.15.0",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "tree-kill": "^1.2.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "unplugin-turbo-console": "^1.8.6",
+    "vite": "^5.3.1",
     "vitest": "^1.6.0",
-    "web-vitals": "3.5.1",
-    "webpack": "^5.91.0",
+    "web-vitals": "3.5.2",
+    "webpack": "^5.92.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0",
@@ -55,7 +63,10 @@
     "start": "cross-env PORT=3720 react-app-rewired start",
     "build": "cross-env PORT=3720 react-app-rewired build",
     "postinstall": "patch-package",
-    "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\"  react-app-rewired test --setupFilesAfterEnv ./src/setupTests.js",
+    "test": "vitest run",
+    "test:old": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\"  react-app-rewired test --setupFilesAfterEnv ./src/setupTests.js",
+    "test.update": "vitest run --update",
+    "coverage": "vitest run --coverage",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "server": "json-server -p3725 --watch db.json",
@@ -125,5 +136,12 @@
       "<rootDir>/backend"
     ]
   },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  "typesVersions": {
+    "<4.7": {
+      "*": [
+        "./src/index.jsx"
+      ]
+    }
+  },
+  "packageManager": "yarn@1.22.19"
 }
