--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
+    "cypress": "^13.12.0",
     "esbuild-loader": "^4.2.0",
     "file-loader": "^6.2.0",
     "http-proxy-middleware": "^3.0.0",
+    "http-server": "^14.1.1",
     "jsdom": "^24.1.0",
     "json-server": "^1.0.0-beta.0",
     "npm-run-all2": "^6.2.0",
@@ -41,6 +43,7 @@
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "tree-kill": "^1.2.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "unplugin-turbo-console": "^1.8.6",
     "vite": "^5.3.1",
@@ -72,7 +75,10 @@
     "server": "json-server -p3725 --watch db.json",
     "server.person": "json-server -p3725 --watch db-person.json",
     "re": "yarn --cwd ./backend run echo",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "cypress:open": "cypress open",
+    "coverage.html": "http-server ./coverage -o",
+    "test.e2e": "cypress run"
   },
   "browserslist": {
     "production": [
@@ -143,5 +149,74 @@
       ]
     }
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "resolutions": {
+    "abab": "npm:@nolyfill/abab@latest",
+    "array-buffer-byte-length": "npm:@nolyfill/array-buffer-byte-length@latest",
+    "array-includes": "npm:@nolyfill/array-includes@latest",
+    "array.prototype.findlast": "npm:@nolyfill/array.prototype.findlast@latest",
+    "array.prototype.findlastindex": "npm:@nolyfill/array.prototype.findlastindex@latest",
+    "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@latest",
+    "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@latest",
+    "array.prototype.reduce": "npm:@nolyfill/array.prototype.reduce@latest",
+    "array.prototype.toreversed": "npm:@nolyfill/array.prototype.toreversed@latest",
+    "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@latest",
+    "arraybuffer.prototype.slice": "npm:@nolyfill/arraybuffer.prototype.slice@latest",
+    "asynciterator.prototype": "npm:@nolyfill/asynciterator.prototype@latest",
+    "available-typed-arrays": "npm:@nolyfill/available-typed-arrays@latest",
+    "define-properties": "npm:@nolyfill/define-properties@latest",
+    "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
+    "es-set-tostringtag": "npm:@nolyfill/es-set-tostringtag@latest",
+    "function-bind": "npm:@nolyfill/function-bind@latest",
+    "function.prototype.name": "npm:@nolyfill/function.prototype.name@latest",
+    "get-symbol-description": "npm:@nolyfill/get-symbol-description@latest",
+    "globalthis": "npm:@nolyfill/globalthis@latest",
+    "gopd": "npm:@nolyfill/gopd@latest",
+    "harmony-reflect": "npm:@nolyfill/harmony-reflect@latest",
+    "has-property-descriptors": "npm:@nolyfill/has-property-descriptors@latest",
+    "has-proto": "npm:@nolyfill/has-proto@latest",
+    "has-symbols": "npm:@nolyfill/has-symbols@latest",
+    "has-tostringtag": "npm:@nolyfill/has-tostringtag@latest",
+    "hasown": "npm:@nolyfill/hasown@latest",
+    "internal-slot": "npm:@nolyfill/internal-slot@latest",
+    "is-array-buffer": "npm:@nolyfill/is-array-buffer@latest",
+    "is-date-object": "npm:@nolyfill/is-date-object@latest",
+    "is-generator-function": "npm:@nolyfill/is-generator-function@latest",
+    "is-regex": "npm:@nolyfill/is-regex@latest",
+    "is-shared-array-buffer": "npm:@nolyfill/is-shared-array-buffer@latest",
+    "is-string": "npm:@nolyfill/is-string@latest",
+    "is-symbol": "npm:@nolyfill/is-symbol@latest",
+    "is-typed-array": "npm:@nolyfill/is-typed-array@latest",
+    "is-weakref": "npm:@nolyfill/is-weakref@latest",
+    "isarray": "npm:@nolyfill/isarray@latest",
+    "iterator.prototype": "npm:@nolyfill/iterator.prototype@latest",
+    "json-stable-stringify": "npm:@nolyfill/json-stable-stringify@latest",
+    "jsonify": "npm:@nolyfill/jsonify@latest",
+    "object-keys": "npm:@nolyfill/object-keys@latest",
+    "object.assign": "npm:@nolyfill/object.assign@latest",
+    "object.entries": "npm:@nolyfill/object.entries@latest",
+    "object.fromentries": "npm:@nolyfill/object.fromentries@latest",
+    "object.getownpropertydescriptors": "npm:@nolyfill/object.getownpropertydescriptors@latest",
+    "object.groupby": "npm:@nolyfill/object.groupby@latest",
+    "object.hasown": "npm:@nolyfill/object.hasown@latest",
+    "object.values": "npm:@nolyfill/object.values@latest",
+    "reflect.getprototypeof": "npm:@nolyfill/reflect.getprototypeof@latest",
+    "regexp.prototype.flags": "npm:@nolyfill/regexp.prototype.flags@latest",
+    "safe-array-concat": "npm:@nolyfill/safe-array-concat@latest",
+    "safe-regex-test": "npm:@nolyfill/safe-regex-test@latest",
+    "set-function-length": "npm:@nolyfill/set-function-length@latest",
+    "side-channel": "npm:@nolyfill/side-channel@latest",
+    "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@latest",
+    "string.prototype.trim": "npm:@nolyfill/string.prototype.trim@latest",
+    "string.prototype.trimend": "npm:@nolyfill/string.prototype.trimend@latest",
+    "string.prototype.trimstart": "npm:@nolyfill/string.prototype.trimstart@latest",
+    "typed-array-buffer": "npm:@nolyfill/typed-array-buffer@latest",
+    "typed-array-byte-length": "npm:@nolyfill/typed-array-byte-length@latest",
+    "typed-array-byte-offset": "npm:@nolyfill/typed-array-byte-offset@latest",
+    "typed-array-length": "npm:@nolyfill/typed-array-length@latest",
+    "unbox-primitive": "npm:@nolyfill/unbox-primitive@latest",
+    "util.promisify": "npm:@nolyfill/util.promisify@latest",
+    "which-boxed-primitive": "npm:@nolyfill/which-boxed-primitive@latest",
+    "which-typed-array": "npm:@nolyfill/which-typed-array@latest"
+  }
 }
