chore(fe): prepare to use workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
     "stylexjs",
     "swcrc",
     "Togglable",
-    "TTFB"
+    "TTFB",
+    "Uncurried",
+    "zustand"
   ],
   "cSpell.ignorePaths": [
     "package-lock.json",
