--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,19 +22,10 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "types": [
-      "vitest/globals"
-    ]
+    "types": ["vitest/globals"]
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+  "include": ["src", "__mocks__"],
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
