--- a/package.json
+++ b/package.json
@@ -4,36 +4,39 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@eslint-react/eslint-plugin": "^1.5.16",
-    "@eslint/compat": "^1.1.0",
-    "@stylexjs/stylex": "^0.6.1",
-    "@swc/core": "^1.6.5",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@babel/core": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "@dotenvx/dotenvx": "^1.15.0",
+    "@eslint-react/eslint-plugin": "^1.14.3",
+    "@eslint/compat": "^1.2.0",
+    "@stylexjs/stylex": "^0.8.0",
+    "@swc/core": "^1.7.26",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/customize-cra": "^1.0.8",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-node-externals": "^3.0.4",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "axios": "^1.7.2",
-    "babel-loader": "^9.1.3",
-    "concurrently": "^8.2.2",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/ui": "^2.1.2",
+    "axios": "^1.7.7",
+    "babel-loader": "^9.2.1",
+    "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
-    "cypress": "^13.12.0",
-    "esbuild-loader": "^4.2.0",
+    "cypress": "^13.15.0",
+    "deep-freeze-es6": "^3.0.2",
+    "esbuild-loader": "^4.2.2",
     "file-loader": "^6.2.0",
-    "http-proxy-middleware": "^3.0.0",
+    "http-proxy-middleware": "^3.0.3",
     "http-server": "^14.1.1",
-    "jsdom": "^24.1.0",
-    "json-server": "^1.0.0-beta.0",
-    "npm-run-all2": "^6.2.0",
+    "jsdom": "^25.0.1",
+    "json-server": "^1.0.0-beta.3",
+    "mini-css-extract-plugin": "^2.9.1",
+    "npm-run-all2": "^6.2.3",
     "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -45,23 +48,24 @@
     "tree-kill": "^1.2.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "unplugin-turbo-console": "^1.8.6",
-    "vite": "^5.3.1",
-    "vitest": "^1.6.0",
+    "unplugin-turbo-console": "^1.10.4",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2",
     "web-vitals": "3.5.2",
-    "webpack": "^5.92.1",
+    "webpack": "^5.95.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "dev": "yarn run coc",
     "coc": "tsx --tsconfig ./jsconfig.json ./coc_boot.js",
     "start.be": "yarn --cwd ./backend run dev",
     "dev-p": "run-p dev dev.be",
-    "new-dev": "webpack serve --mode development",
-    "new-build": "webpack --mode development",
+    "new-dev": "webpack serve --mode development -c ./webpack.config.mjs",
+    "new-build": "webpack --mode development -c ./webpack.config.mjs",
     "new-preview": "http-server ./new-build",
     "start": "cross-env PORT=3720 react-app-rewired start",
     "build": "cross-env PORT=3720 react-app-rewired build",
@@ -93,29 +97,29 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.24.7",
-    "@babel/preset-env": "^7.24.6",
+    "@babel/eslint-parser": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
     "@react-dev-inspector/middleware": "^2.0.1",
-    "@stylexjs/webpack-plugin": "^0.6.1",
-    "@tsconfig/create-react-app": "^2.0.4",
+    "@stylexjs/webpack-plugin": "^0.8.0",
+    "@tsconfig/create-react-app": "^2.0.5",
     "@types/node": "20.12.2",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "babel-jest": "^29.7.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "customize-cra": "^1.0.0",
-    "eslint": "^9.4.0",
+    "eslint": "^9.12.0",
     "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "html-loader": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "react-app-rewired": "^2.2.1",
     "react-test-renderer": "^18.3.1",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.2",
     "webpack-cli": "^5.1.4"
   },
   "jest": {
@@ -149,7 +153,7 @@
       ]
     }
   },
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "yarn@1.22.22",
   "resolutions": {
     "abab": "npm:@nolyfill/abab@latest",
     "array-buffer-byte-length": "npm:@nolyfill/array-buffer-byte-length@latest",
