--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ node_modules
 /coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -25,6 +25,7 @@ yarn-error.log*
 
 dist
 new-build
+wp-build
 
 1-getting-started
 2-advanced-examples
