--- a/package.json
+++ b/package.json
@@ -3,85 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "dependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/preset-react": "^7.25.7",
-    "@dotenvx/dotenvx": "^1.15.0",
-    "@eslint-react/eslint-plugin": "^1.14.3",
-    "@eslint/compat": "^1.2.0",
-    "@stylexjs/stylex": "^0.8.0",
-    "@swc/core": "^1.7.26",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/customize-cra": "^1.0.8",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@types/webpack-bundle-analyzer": "^4.7.0",
-    "@types/webpack-node-externals": "^3.0.4",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
-    "axios": "^1.7.7",
-    "babel-loader": "^9.2.1",
-    "concurrently": "^9.0.1",
-    "cross-env": "^7.0.3",
-    "cypress": "^13.15.0",
-    "deep-freeze-es6": "^3.0.2",
-    "esbuild-loader": "^4.2.2",
-    "file-loader": "^6.2.0",
-    "http-proxy-middleware": "^3.0.3",
-    "http-server": "^14.1.1",
-    "jsdom": "^25.0.1",
-    "json-server": "^1.0.0-beta.3",
-    "mini-css-extract-plugin": "^2.9.1",
-    "npm-run-all2": "^6.2.3",
-    "patch-package": "^8.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "react-shallow-renderer": "^16.15.0",
-    "style-loader": "^4.0.0",
-    "swc-loader": "^0.2.6",
-    "tree-kill": "^1.2.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "unplugin-turbo-console": "^1.10.4",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.2",
-    "web-vitals": "3.5.2",
-    "webpack": "^5.95.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-dev-server": "^5.1.0",
-    "webpack-manifest-plugin": "^5.0.0",
-    "webpack-node-externals": "^3.0.0",
-    "zustand": "^4.5.5"
-  },
   "scripts": {
     "dev": "yarn run coc",
     "coc": "tsx --tsconfig ./jsconfig.json ./coc_boot.js",
+    "preview.wp": "http-server ./wp-build",
+    "dev-p": "run-p start start.be",
+    "start": "yarn --cwd ./frontend run dev",
     "start.be": "yarn --cwd ./backend run dev",
-    "dev-p": "run-p dev dev.be",
-    "new-dev": "webpack serve --mode development -c ./webpack.config.mjs",
-    "new-build": "webpack --mode development -c ./webpack.config.mjs",
-    "new-preview": "http-server ./new-build",
-    "start": "cross-env PORT=3720 react-app-rewired start",
-    "build": "cross-env PORT=3720 react-app-rewired build",
     "postinstall": "patch-package",
-    "test": "vitest run",
-    "test:old": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\"  react-app-rewired test --setupFilesAfterEnv ./src/setupTests.js",
-    "test.update": "vitest run --update",
-    "coverage": "vitest run --coverage",
-    "eject": "react-scripts eject",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "server": "json-server -p3725 --watch db.json",
-    "server.person": "json-server -p3725 --watch db-person.json",
-    "re": "yarn --cwd ./backend run echo",
+    "server.person": "json-server -p3725 --watch ./backend/db-person.json",
+    "ping.fe": "yarn --cwd ./frontend run echo",
+    "ping.be": "yarn --cwd ./backend run echo",
     "lint": "eslint ./src",
     "cypress:open": "cypress open",
-    "coverage.html": "http-server ./coverage -o",
     "test.e2e": "cypress run"
   },
   "browserslist": {
@@ -97,130 +31,38 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
-    "@react-dev-inspector/middleware": "^2.0.1",
-    "@stylexjs/webpack-plugin": "^0.8.0",
-    "@tsconfig/create-react-app": "^2.0.5",
+    "@dotenvx/dotenvx": "^1.15.0",
+    "@eslint-react/eslint-plugin": "^1.14.3",
+    "@eslint/compat": "^1.2.0",
     "@types/node": "20.12.2",
-    "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^8.8.0",
-    "babel-jest": "^29.7.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
-    "customize-cra": "^1.0.0",
+    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/ui": "^2.1.2",
+    "concurrently": "^9.0.1",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.15.0",
     "eslint": "^9.12.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
-    "react-app-rewired": "^2.2.1",
-    "react-test-renderer": "^18.3.1",
+    "jsdom": "^25.0.1",
+    "json-server": "^1.0.0-beta.3",
+    "nolyfill": "^1.0.39",
+    "npm-run-all2": "^6.2.3",
+    "patch-package": "^8.0.0",
+    "tree-kill": "^1.2.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "webpack-cli": "^5.1.4"
+    "vitest": "^2.1.2",
+    "web-vitals": "3.5.2"
   },
-  "jest": {
-    "extensionsToTreatAsEsm": [
-      ".jsx"
-    ],
-    "transform": {
-      "\\.jsx?$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!axios/)"
-    ],
-    "setupFilesAfterEnv": [
-      "./src/setupTests.js"
-    ],
-    "moduleNameMapper": {
-      "@/(.*)": "./src/$1"
-    },
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/backend"
-    ]
-  },
-  "typesVersions": {
-    "<4.7": {
-      "*": [
-        "./src/index.jsx"
-      ]
-    }
-  },
+  "workspaces": [
+    "./frontend",
+    "./backend"
+  ],
   "packageManager": "yarn@1.22.22",
-  "resolutions": {
-    "abab": "npm:@nolyfill/abab@latest",
-    "array-buffer-byte-length": "npm:@nolyfill/array-buffer-byte-length@latest",
-    "array-includes": "npm:@nolyfill/array-includes@latest",
-    "array.prototype.findlast": "npm:@nolyfill/array.prototype.findlast@latest",
-    "array.prototype.findlastindex": "npm:@nolyfill/array.prototype.findlastindex@latest",
-    "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@latest",
-    "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@latest",
-    "array.prototype.reduce": "npm:@nolyfill/array.prototype.reduce@latest",
-    "array.prototype.toreversed": "npm:@nolyfill/array.prototype.toreversed@latest",
-    "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@latest",
-    "arraybuffer.prototype.slice": "npm:@nolyfill/arraybuffer.prototype.slice@latest",
-    "asynciterator.prototype": "npm:@nolyfill/asynciterator.prototype@latest",
-    "available-typed-arrays": "npm:@nolyfill/available-typed-arrays@latest",
-    "define-properties": "npm:@nolyfill/define-properties@latest",
-    "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
-    "es-set-tostringtag": "npm:@nolyfill/es-set-tostringtag@latest",
-    "function-bind": "npm:@nolyfill/function-bind@latest",
-    "function.prototype.name": "npm:@nolyfill/function.prototype.name@latest",
-    "get-symbol-description": "npm:@nolyfill/get-symbol-description@latest",
-    "globalthis": "npm:@nolyfill/globalthis@latest",
-    "gopd": "npm:@nolyfill/gopd@latest",
-    "harmony-reflect": "npm:@nolyfill/harmony-reflect@latest",
-    "has-property-descriptors": "npm:@nolyfill/has-property-descriptors@latest",
-    "has-proto": "npm:@nolyfill/has-proto@latest",
-    "has-symbols": "npm:@nolyfill/has-symbols@latest",
-    "has-tostringtag": "npm:@nolyfill/has-tostringtag@latest",
-    "hasown": "npm:@nolyfill/hasown@latest",
-    "internal-slot": "npm:@nolyfill/internal-slot@latest",
-    "is-array-buffer": "npm:@nolyfill/is-array-buffer@latest",
-    "is-date-object": "npm:@nolyfill/is-date-object@latest",
-    "is-generator-function": "npm:@nolyfill/is-generator-function@latest",
-    "is-regex": "npm:@nolyfill/is-regex@latest",
-    "is-shared-array-buffer": "npm:@nolyfill/is-shared-array-buffer@latest",
-    "is-string": "npm:@nolyfill/is-string@latest",
-    "is-symbol": "npm:@nolyfill/is-symbol@latest",
-    "is-typed-array": "npm:@nolyfill/is-typed-array@latest",
-    "is-weakref": "npm:@nolyfill/is-weakref@latest",
-    "isarray": "npm:@nolyfill/isarray@latest",
-    "iterator.prototype": "npm:@nolyfill/iterator.prototype@latest",
-    "json-stable-stringify": "npm:@nolyfill/json-stable-stringify@latest",
-    "jsonify": "npm:@nolyfill/jsonify@latest",
-    "object-keys": "npm:@nolyfill/object-keys@latest",
-    "object.assign": "npm:@nolyfill/object.assign@latest",
-    "object.entries": "npm:@nolyfill/object.entries@latest",
-    "object.fromentries": "npm:@nolyfill/object.fromentries@latest",
-    "object.getownpropertydescriptors": "npm:@nolyfill/object.getownpropertydescriptors@latest",
-    "object.groupby": "npm:@nolyfill/object.groupby@latest",
-    "object.hasown": "npm:@nolyfill/object.hasown@latest",
-    "object.values": "npm:@nolyfill/object.values@latest",
-    "reflect.getprototypeof": "npm:@nolyfill/reflect.getprototypeof@latest",
-    "regexp.prototype.flags": "npm:@nolyfill/regexp.prototype.flags@latest",
-    "safe-array-concat": "npm:@nolyfill/safe-array-concat@latest",
-    "safe-regex-test": "npm:@nolyfill/safe-regex-test@latest",
-    "set-function-length": "npm:@nolyfill/set-function-length@latest",
-    "side-channel": "npm:@nolyfill/side-channel@latest",
-    "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@latest",
-    "string.prototype.trim": "npm:@nolyfill/string.prototype.trim@latest",
-    "string.prototype.trimend": "npm:@nolyfill/string.prototype.trimend@latest",
-    "string.prototype.trimstart": "npm:@nolyfill/string.prototype.trimstart@latest",
-    "typed-array-buffer": "npm:@nolyfill/typed-array-buffer@latest",
-    "typed-array-byte-length": "npm:@nolyfill/typed-array-byte-length@latest",
-    "typed-array-byte-offset": "npm:@nolyfill/typed-array-byte-offset@latest",
-    "typed-array-length": "npm:@nolyfill/typed-array-length@latest",
-    "unbox-primitive": "npm:@nolyfill/unbox-primitive@latest",
-    "util.promisify": "npm:@nolyfill/util.promisify@latest",
-    "which-boxed-primitive": "npm:@nolyfill/which-boxed-primitive@latest",
-    "which-typed-array": "npm:@nolyfill/which-typed-array@latest"
+  "dependencies": {
+    "stale-dep": "^0.7.0"
   }
 }
