chore: update dep; use newest config setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,9 @@
   "eslint.workingDirectories": [
     "./src"
   ],
-  "eslint.format.enable": true
+  "eslint.format.enable": true,
+  "editor.tokenColorCustomizations": {
+    "comments": "",
+    "textMateRules": []
+  }
 }
