--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fullstackopen-w/frontend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -31,50 +31,50 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
     "@react-dev-inspector/middleware": "^2.0.1",
-    "@stylexjs/webpack-plugin": "^0.8.0",
+    "@stylexjs/webpack-plugin": "^0.9.3",
     "@tsconfig/create-react-app": "^2.0.5",
-    "@types/node": "20.12.2",
+    "@types/node": "~20.17.10",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/parser": "^8.8.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "babel-jest": "^29.7.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "customize-cra": "^1.0.0",
     "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "nolyfill": "^1.0.39",
+    "nolyfill": "^1.0.43",
     "react-app-rewired": "^2.2.1",
     "react-test-renderer": "^18.3.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.7.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/preset-react": "^7.25.7",
-    "@dotenvx/dotenvx": "^1.15.0",
-    "@stylexjs/stylex": "^0.8.0",
-    "@swc/core": "^1.7.26",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
+    "@dotenvx/dotenvx": "^1.31.0",
+    "@stylexjs/stylex": "^0.9.3",
+    "@swc/core": "^1.10.1",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/customize-cra": "^1.0.8",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-node-externals": "^3.0.4",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
-    "@vitejs/plugin-react": "^4.3.2",
-    "axios": "^1.7.7",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
     "babel-loader": "^9.2.1",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "cross-env": "^7.0.3",
-    "cypress": "^13.15.0",
+    "cypress": "^13.16.1",
     "deep-freeze-es6": "^3.0.2",
     "esbuild-loader": "^4.2.2",
     "file-loader": "^6.2.0",
@@ -82,8 +82,8 @@
     "http-server": "^14.1.1",
     "jsdom": "^25.0.1",
     "json-server": "^1.0.0-beta.3",
-    "mini-css-extract-plugin": "^2.9.1",
-    "npm-run-all2": "^6.2.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "npm-run-all2": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -92,17 +92,17 @@
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "ts-node": "^10.9.2",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "unplugin-turbo-console": "^1.10.4",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.2",
+    "vite": "^6.0.3",
+    "vitest": "^2.1.8",
     "web-vitals": "3.5.2",
-    "webpack": "^5.95.0",
+    "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-dev-server": "^5.1.0",
+    "webpack-dev-server": "^5.2.0",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-node-externals": "^3.0.0",
-    "zustand": "^4.5.5"
+    "zustand": "^5.0.2"
   },
   "jest": {
     "extensionsToTreatAsEsm": [
