--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fullstackopen-w",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -31,30 +31,30 @@
     ]
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.15.0",
-    "@eslint-react/eslint-plugin": "^1.14.3",
-    "@eslint/compat": "^1.2.0",
-    "@types/node": "20.12.2",
-    "@typescript-eslint/parser": "^8.8.0",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
-    "concurrently": "^9.0.1",
+    "@dotenvx/dotenvx": "^1.31.0",
+    "@eslint-react/eslint-plugin": "^1.19.0",
+    "@eslint/compat": "^1.2.4",
+    "@types/node": "~20.17.10",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "concurrently": "^9.1.0",
     "cross-env": "^7.0.3",
-    "cypress": "^13.15.0",
-    "eslint": "^9.12.0",
-    "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "cypress": "^13.16.1",
+    "eslint": "^9.17.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "jsdom": "^25.0.1",
     "json-server": "^1.0.0-beta.3",
-    "nolyfill": "^1.0.39",
-    "npm-run-all2": "^6.2.3",
+    "nolyfill": "^1.0.43",
+    "npm-run-all2": "^7.0.1",
     "patch-package": "^8.0.0",
     "tree-kill": "^1.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "vitest": "^2.1.2",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8",
     "web-vitals": "3.5.2"
   },
   "workspaces": [
@@ -63,6 +63,8 @@
   ],
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "no-try": "^4.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "stale-dep": "^0.7.0"
   }
 }
